[package]
name = "rcon-rs"
version = "0.1.0"
edition = "2021"
description = "An implementation of RCON similar to gorcon"
repository = "https://github.com/bitcrshr/rcon-rs"
license-file = "LICENSE"
authors = ["Chandler Davis"]
readme = "README.md"
keywords = ["rcon"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2d2 = "0.8.10"
rand = "0.8.5"
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.56"
